--- a/getting-started-rust/Cargo.toml
+++ b/getting-started-rust/Cargo.toml
@@ -6,3 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+log = "0.4.22"
+base64 = "0.22.1"
+http = "1.1.0"
+dirs-sys = "0.4.1"
+postgres = "0.19.7"
+#reqwest = "0.12.5"
