--- a/getting-started-rust/Cargo.toml
+++ b/getting-started-rust/Cargo.toml
@@ -10,5 +10,7 @@ log = "0.4.22"
 base64 = "0.22.1"
 http = "1.1.0"
 dirs-sys = "0.4.1"
-postgres = "0.19.7"
+postgres = "0.19.8"
+sea-orm = "1.0.0"
+actix-web = "4"
 #reqwest = "0.12.5"
