--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2021"
 publish = false
 
 [workspace]
-members = [".", "actix-web", "getting-started-rust", "seaorm"]
+members = [".", "actix", "getting-started-rust", "seaorm"]
 
 [dependencies]
