--- a/getting-started-rust/Cargo.toml
+++ b/getting-started-rust/Cargo.toml
@@ -6,11 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+math_lib = {path = "../math_lib" }
+db_example = {path = "../db_example" }
+
 log = "0.4.22"
-base64 = "0.22.1"
-http = "1.1.0"
-dirs-sys = "0.4.1"
-postgres = "0.19.8"
-sea-orm = "1.0.0"
-actix-web = "4"
-#reqwest = "0.12.5"
